--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	// Apache
 	implementation "org.apache.logging.log4j:log4j-api:${Log4jAPI}" // Logging
 	implementation "org.apache.logging.log4j:log4j-core:${Log4jCore}" // Logging
+	implementation "org.apache.commons:commons-lang3:${ApacheLang}" // Utility
 	implementation "commons-io:commons-io:${ApacheIO}" // IO
 	// Other
 	implementation "net.sf.jopt-simple:jopt-simple:${JoptSimple}" // Startup
