--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Gradle settings
 org.gradle.parallel = true
+org.gradle.daemon = true
 org.gradle.jvmargs = -Xmx4096M
 # Dependencies
 JavaFx = 17.0.6
