--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,15 @@ org.gradle.jvmargs = -Xmx4096M
 # Dependencies
 JavaFx = 17.0.6
 ControlsFx = 1.1.1
-LUtils = 4.9.0
-FxUtils = 2.0.0
+LUtils = 5.9.0
+FxUtils = 2.1.1
 GoogleGuava = 32.0.1-jre
+GoogleGson = 2.10.1
 Log4jAPI = 2.20.0
 Log4jCore = 2.20.0
 ApacheLang = 3.12.0
 ApacheIO = 2.13.0
-JoptSimple = 5.0.4
+JOptSimple = 5.0.4
 JetBrainsAnnotations = 24.0.1
 UnimiFastutil = 8.5.12
+MojangCodec = 6.0.8
